# COVID-19-Healthy-Diet

./: README.md  Read.me  pyproject.toml  requirements.txt
regression_notebooks/: decision_tree_regression.ipynb  linear_regression.ipynb  neural_networks_regression copy.ipynb  random_forest_regression.ipynb
