[tool.poetry]
name = "covid-19 healthy diet"
version = "0.1.0"
description = ""
authors = ["Lucas Lago <lukemartinslagonit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
